now working with repository pattern

--- a/Bulky/BulkyWeb/Views/Category/Delete.cshtml
+++ b/Bulky/BulkyWeb/Views/Category/Delete.cshtml
@@ -1,5 +1,5 @@
-﻿@model Category
-<partial name="_Notifications" />
+﻿@model Bulky.Models.Models.Category
+
 <form method="post">
     <input asp-for="Id" hidden/> 
     @* This is required because Id is not anywhere here so when it will pass to the  *@
