--- a/Bulky/BulkyWeb/Views/Category/Create.cshtml
+++ b/Bulky/BulkyWeb/Views/Category/Create.cshtml
@@ -1,5 +1,5 @@
-@model Category
-<partial name="_Notifications" />
+@model Bulky.Models.Models.Category
+
 <form method="post" asp-action="Create">
     <div class="border p-3 mt-4">
         <div class="row pb-2">
