--- a/Bulky/BulkyWeb/Views/Category/Edit.cshtml
+++ b/Bulky/BulkyWeb/Views/Category/Edit.cshtml
@@ -1,5 +1,5 @@
-﻿@model Category
-<partial name="_Notifications" />
+﻿@model Bulky.Models.Models.Category
+
 <form method="post">
     @* <input asp-for="Id" hidden/> This is required because Id is not anywhere here so when it will pass to the 
 Edit controller the Id will be set to be 0 which means db will create new record instead of updating existing one *@
