--- a/Bulky/BulkyWeb/Views/Category/Index.cshtml
+++ b/Bulky/BulkyWeb/Views/Category/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@model List<Category>
-<partial name="_Notifications" />
+﻿@model List<Bulky.Models.Models.Category>
+
 <div class="container">
     <div class="row pt-4 pb-3">
         <div class="col-6">
