--- a/Bulky/BulkyWeb/Views/_ViewImports.cshtml
+++ b/Bulky/BulkyWeb/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
-﻿@using BulkyWebRazor_Temp
-@using BulkyWebRazor_Temp.Models
+﻿@using Bulky
+@using Bulky.DataAccess.Models
+@using Bulky.DataAccess.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
