learned about the repo pattern and unit of work

--- a/Bulky/BulkyWeb/Views/Category/Delete.cshtml
+++ b/Bulky/BulkyWeb/Views/Category/Delete.cshtml
@@ -26,7 +26,7 @@
                 <button type="submit" class="btn btn-danger w-100">Delete</button>
             </div>
             <div class="col-6 col-md-3">
-                <a asp-controller="Category" asp-action="Edit" class="btn btn-secondary border-1 border-dark w-100">Back to List</a>
+                <a asp-controller="Category" asp-action="Index" class="btn btn-secondary border-1 border-dark w-100">Back to List</a>
             </div>
         </div>
     </div>
