--- a/Bulky/BulkyWeb/Views/Category/Edit.cshtml
+++ b/Bulky/BulkyWeb/Views/Category/Edit.cshtml
@@ -25,7 +25,7 @@ Edit controller the Id will be set to be 0 which means db will create new record
                 <button type="submit" class="btn btn-primary w-100">Edit</button>
             </div>
             <div class="col-6 col-md-3">
-                <a asp-controller="Category" asp-action="Edit" class="btn btn-secondary border-1 border-dark w-100">Back to List</a>
+                <a asp-controller="Category" asp-action="Index" class="btn btn-secondary border-1 border-dark w-100">Back to List</a>
             </div>
         </div>
     </div>
