--- a/Bulky/BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/Bulky/BulkyWeb/Views/Shared/_Layout.cshtml
@@ -28,8 +28,17 @@
                             <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " asp-area="" asp-controller="Category" asp-action="Index">Category</a>
+                            
                         </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                           Content Mangement
+                            </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item " asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a></li>
+                            <li><a class="dropdown-item " asp-area="Customer" asp-controller="Product" asp-action="Index">Products</a></li>
+                        </ul>
+                     </li>
                     </ul>
                 </div>
             </div>
@@ -42,11 +51,11 @@
         </main>
     </div>
 
-    <footer class="border-top footer bg-primary text-muted">
+    @* <footer class="border-top footer bg-primary text-muted" style="margin-top : 2rem">
         <div class="container">
             BulkyWeb - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
-    </footer>
+    </footer> *@
 
     
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
